:art: Fix off-click issue with address bar :art: Fix off-click issue with address bar :lipstick: Made position of address bar align correctly :bug: All that is left is to make right click work and then should be able to merge

--- a/src/packages/one-fluent-theme/modules/address-bar.scss
+++ b/src/packages/one-fluent-theme/modules/address-bar.scss
@@ -6,7 +6,8 @@
 
 // Address bar
 .tara-address-bar {
-  //@include background-opacity($accent-address-bar, $address-bar-opacity);
+  // @include background-opacity($accent-address-bar, $address-bar-opacity);
+  height: 38px; // Keep height constant so the picker doesn't push the files grid down when activated
   text-align: center;
   .current-dir {
     display: inline-block;
@@ -19,8 +20,9 @@
     left: 9px;
     padding: 7px;
     position: absolute;
-    top: 8px;
+    // top: 8px;
     width: 30px;
+    margin-top: 3.1px;
   }
   .fa:hover {
     @include background-opacity($accent-address-bar, $address-bar-icons-opacity-hover);
@@ -63,4 +65,9 @@
       @include background-opacity($accent-address-bar, $address-bar-picker-button-opacity-active);
     }
   }
+}
+
+// Class for when the picker (textbox) is in use
+.tara-address-bar-active {
+  margin-top: 25px;
 }
